# axiom-brain

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  Dockerfile  MEMORY_MAP.md  VISION.md  docker-compose.yml  litellm_config.yaml  nginx.conf  pyproject.toml  test.md  test_langgraph_interrupt.py  test_planner.py  test_planner2.py  test_run.py  test_urlparse.py  update_workflow.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
DOCS/: AGENTIC_STACK.md  CONNECTORS.md  NEW_AGENTIC_ORCHESTRATION_RESEARCH.md  ONBOARDING.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/data-lake/: page.tsx
frontend/src/app/data-sources/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/oauth/done/: page.tsx
frontend/src/app/onboard/: page.tsx
frontend/src/components/: AxiomArtifacts.tsx  AxiomCanvas.tsx  DataTable.tsx  IntelligenceOrb.tsx  N8nConnectWizard.tsx  NotebookArtifactViewer.tsx  ReasoningStream.tsx  Sidebar.tsx  SidebarWrapper.tsx
frontend/src/hooks/: useAxiomChat.ts  useAxiomChatContext.tsx
frontend/src/lib/: DataSanitizer.ts  api.ts
frontend/src/lib/supabase/: middleware.ts
scripts/: check_sources.py  ingest_schema.py  init_control_plane.py  seed.sql  sync_glossary.py  test_mcp_hub.py  test_supervisor.py
src/axiom/: config.py
src/axiom/agent/: app_nodes.py  gmail_nodes.py  graph.py  lake_worker.py  memory_manager.py  nodes.py  planner.py  probing.py  rca_nodes.py  state.py  supervisor.py  thread.py
src/axiom/agent/temporal/: a2a.py  activities.py  sandbox.py  speculative.py  worker.py  workflows.py
src/axiom/api/: app.py  cli.py  oauth_routes.py  onboard.py  query.py
src/axiom/auth/: oauth.py  token_store.py
src/axiom/connectors/: base.py  dialects.py  factory.py  mcp_adapter.py  postgres_server.py
src/axiom/connectors/apps/: __init__.py  base.py  factory.py  gmail.py  gmail_mcp_server.py  n8n_proxy_server.py
src/axiom/connectors/direct/: mongodb.py  mysql.py  postgres.py
src/axiom/connectors/mcp/: hub.py  registry.py
src/axiom/connectors/n8n/: __init__.py  client.py  connector.py  services.py
src/axiom/core/: cleansing.py  discovery.py  inference.py
src/axiom/notebooks/: __init__.py  artifacts.py  builder.py  executor_app.py  executor_client.py
src/axiom/rag/: mcp_server.py  schema.py
src/axiom/security/: auth.py  guard.py
src/axiom/security/trust/: ans.py  monitor.py  pep.py  tagging.py
supabase/: config.toml
tests/: test_agent.py  test_agentic_orchestration_e2e.py  test_analyst_viz.py  test_cleansing.py  test_deepeval_benchmark.py  test_mysql_ssh_tunnel.py  test_notebook_artifact.py  test_semantic_cache.py  test_semantic_layer.py  test_ssh_tunnel.py  test_vanna_fix.py
