[project]
name = "axiom-brain"
version = "0.1.0"
description = "Axiom — Reasoning-as-Infrastructure Text-to-SQL agent"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langgraph>=0.2.0,<1.0.0",
    "langchain-community>=0.2.0",
    "litellm>=1.40.0",
    "chromadb>=0.5.0",
    "networkx>=3.3",
    "mcp>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.31.0",
    "langgraph-checkpoint-redis>=0.3.6",
    "aiomysql>=0.3.2",
    "cryptography>=46.0.7",
    "pyjwt>=2.12.1",
    "sqlglot>=25.0.0",
    "tiktoken>=0.7.0",
    "sshtunnel>=0.4.0",
    "paramiko<4.0.0",
    "PyYAML>=6.0.0",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "matplotlib>=3.10.0",
    "plotly>=5.0.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "deepeval>=1.0.0",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
